--- a/src/presentacion/IfrmAgregarEmpleado.form
+++ b/src/presentacion/IfrmAgregarEmpleado.form
@@ -50,7 +50,7 @@
                   <EmptySpace min="-2" pref="16" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" max="-2" attributes="0">
                       <Group type="102" attributes="0">
-                          <Component id="lblIdAgencia" min="-2" max="-2" attributes="0"/>
+                          <Component id="lblAgencia" min="-2" max="-2" attributes="0"/>
                           <EmptySpace type="separate" max="-2" attributes="0"/>
                           <Component id="txtIDAgencia" max="32767" attributes="0"/>
                       </Group>
@@ -161,7 +161,7 @@
                   </Group>
                   <EmptySpace pref="17" max="32767" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
-                      <Component id="lblIdAgencia" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="lblAgencia" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="txtIDAgencia" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace max="-2" attributes="0"/>
@@ -262,9 +262,9 @@
             <Property name="text" type="java.lang.String" value="TIPO: "/>
           </Properties>
         </Component>
-        <Component class="javax.swing.JLabel" name="lblIdAgencia">
+        <Component class="javax.swing.JLabel" name="lblAgencia">
           <Properties>
-            <Property name="text" type="java.lang.String" value="ID AGENCIA:"/>
+            <Property name="text" type="java.lang.String" value="AGENCIA:"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JTextField" name="txtIDAgencia">
