--- a/src/presentacion/IfrmListaEmpleado.form
+++ b/src/presentacion/IfrmListaEmpleado.form
@@ -2,7 +2,7 @@
 
 <Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JInternalFrameFormInfo">
   <Properties>
-    <Property name="title" type="java.lang.String" value="Lista De Clientes"/>
+    <Property name="title" type="java.lang.String" value="Lista De Empleados"/>
   </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
@@ -22,17 +22,17 @@
   <Layout>
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Component id="panListaCliente" alignment="0" max="32767" attributes="0"/>
+          <Component id="panListaEmpleado" alignment="0" max="32767" attributes="0"/>
       </Group>
     </DimensionLayout>
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Component id="panListaCliente" alignment="0" max="32767" attributes="0"/>
+          <Component id="panListaEmpleado" alignment="0" max="32767" attributes="0"/>
       </Group>
     </DimensionLayout>
   </Layout>
   <SubComponents>
-    <Container class="javax.swing.JPanel" name="panListaCliente">
+    <Container class="javax.swing.JPanel" name="panListaEmpleado">
       <Properties>
         <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
           <Color blue="ff" green="ff" red="ff" type="rgb"/>
@@ -89,15 +89,16 @@
 
           <Layout class="org.netbeans.modules.form.compat2.layouts.support.JScrollPaneSupportLayout"/>
           <SubComponents>
-            <Component class="javax.swing.JTable" name="tblListaClientes">
+            <Component class="javax.swing.JTable" name="tblListaEmpleados">
               <Properties>
                 <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-                  <Table columnCount="5" rowCount="4">
+                  <Table columnCount="6" rowCount="4">
                     <Column editable="true" title="ID" type="java.lang.Object"/>
                     <Column editable="true" title="Nombre" type="java.lang.Object"/>
-                    <Column editable="true" title="Apellido" type="java.lang.Object"/>
-                    <Column editable="true" title="DNI" type="java.lang.Object"/>
-                    <Column editable="true" title="Sponsor" type="java.lang.Object"/>
+                    <Column editable="true" title="Direcci&#xf3;n" type="java.lang.Object"/>
+                    <Column editable="true" title="Tel&#xe9;fono" type="java.lang.Object"/>
+                    <Column editable="true" title="Tipo" type="java.lang.Object"/>
+                    <Column editable="true" title="Agencia" type="java.lang.Object"/>
                   </Table>
                 </Property>
               </Properties>
@@ -115,8 +116,8 @@
               <StringArray count="4">
                 <StringItem index="0" value="Seleccione"/>
                 <StringItem index="1" value="Nombre"/>
-                <StringItem index="2" value="Apellido"/>
-                <StringItem index="3" value="DNI"/>
+                <StringItem index="2" value="Tipo"/>
+                <StringItem index="3" value="Agencia"/>
               </StringArray>
             </Property>
           </Properties>
