Modifique las entidades administrador empleado y empleadoAgencia, tambien DALEmpleado, agregue el paquete logica con BLAdministradorCreator, BLEmpleado, BLEmpleadoAgenciaCreator, BLEmpleadoCreator y agregue codigo en login para conectar con Frame de administrador y empleado

--- a/src/presentacion/FrmPrincipalAdministrador.form
+++ b/src/presentacion/FrmPrincipalAdministrador.form
@@ -4,10 +4,20 @@
   <NonVisualComponents>
     <Menu class="javax.swing.JMenuBar" name="mnbAdministrador">
       <SubComponents>
-        <Menu class="javax.swing.JMenu" name="mnuCerrar">
+        <Menu class="javax.swing.JMenu" name="mnuOpciones">
           <Properties>
-            <Property name="text" type="java.lang.String" value="Cerrar"/>
+            <Property name="text" type="java.lang.String" value="Opciones"/>
           </Properties>
+          <SubComponents>
+            <MenuItem class="javax.swing.JMenuItem" name="mniLogin">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="Login"/>
+              </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="mniLoginActionPerformed"/>
+              </Events>
+            </MenuItem>
+          </SubComponents>
         </Menu>
         <Menu class="javax.swing.JMenu" name="mnuAgregar">
           <Properties>
